--- a/www/index.html
+++ b/www/index.html
@@ -6,15 +6,16 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Inline Location</title>
+        <title>Indoor Location</title>
     </head>
     <body>
         <div class="app">
-            <h1>Elementary</h1>
             <div id="deviceready">
                 <p class="event listening blink">Initializing...</p>
-                <p class="event received" onclick="alert('Starting ...')">Device Ready</p>
+                <p class="event received" onclick="startWatch(this)">Watch acceleration</p>
+                <p class="event watching" onclick="stopWatch(this)">Stop watching</p>
             </div>
+			<div class="resultPane" id="resultPane"></div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
