--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
                 <p id="event_received" class="event received" onclick="startWatch()">Watch acceleration</p>
                 <p id="event_watching" class="event watching" onclick="stopWatch()">Stop watching</p>
             </div>
-			<div class="result_pane" id="result_pane"></div>
+            <div class="result_pane" id="result_pane"><table id="result_table">
+		<tr>
+			<th>time</th>
+			<th>-x-</th>
+			<th>-y-</th>
+			<th>-z-</th>
+		</tr>
+            </table></div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
