--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
             </div>
             <div class="result_pane" id="result_pane"><table id="result_table">
 		<tr>
-			<th>time</th>
-			<th>-x-</th>
-			<th>-y-</th>
-			<th>-z-</th>
+			<span style="text-align:center;">
+			<td>time</td>
+			<td>-x-</td>
+			<td>-y-</td>
+			<td>-z-</td>
+			<td>-up-</td>
+			<td>-side-</td>
+			</span>
 		</tr>
             </table></div>
         </div>
