--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			<td>-x-</td>
 			<td>-y-</td>
 			<td>-z-</td>
-			<td>-up-</td>
-			<td>-side-</td>
+			<td>tilt-f-b</td>
+			<td>tilt-l-r</td>
 			</span>
 		</tr>
             </table></div>
