--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 					<td>-x-</td>
 					<td>-y-</td>
 					<td>-z-</td>
-					<td>tilt-l-r</td>
-					<td>tilt-f-b</td>
+					<td>tilt-lr</td>
+					<td>tilt-fb</td>
+					<td>dir</td>
+					<td>velo</td>
 					</span>
 				</tr>
             </table></div>
