--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
             </div>
             <div id="result_pane"><table id="result_table">
 				<tr>
-					<span style="text-align:center;">
-					<td>time</td>
-					<td>-x-</td>
-					<td>-y-</td>
-					<td>-z-</td>
-					<td>tilt-lr</td>
-					<td>tilt-fb</td>
-					<td>dir</td>
-					<td>velo</td>
-					</span>
+					<td class="result_table_header">time</td>
+					<td class="result_table_header">-x-</td>
+					<td class="result_table_header">-y-</td>
+					<td class="result_table_header">-z-</td>
+					<td class="result_table_header">lr</td>
+					<td class="result_table_header">fb</td>
+					<td class="result_table_header">dr</td>
+					<td class="result_table_header">velo</td>
 				</tr>
             </table></div>
         </div>
